    HIGHLIGHTS.txt.

Version 7.1  [ TODO ]

    GENERAL:
        - Regina now supports Python 3 only (not Python 2 or 3).
    ENGINE:
        Class Example<4>:
            - New routine k3().
            - Reflected the result of cp2() so that it has intersection
              form [1], not [-1].
        Class IntersectionForm:
            - New class to compute invariants of intersection forms.
        Class Triangulation<dim>:
            - New suite of routines countBoundaryFaces().
            - New suite of public routines dualBoundaryMap() (these were
              previously private, and had a more complex interface).
            - New suite of routines dualToPrimal().
        Class Triangulation<4>:
            - New routine intersectionForm().
        Routine for_constexpr():
            - New routine to support compile-time for loops.

Version 7.0  [ 19 December, 2021 ]

    GENERAL:
        - The file format has changed.  It is still XML-based, but older
          versions of Regina will not be able to read files created by
          Regina 7.0 or later.  Regina can of course still both read
          the old format (transparently) and write it (if asked).
        - The packet tree is now used purely for the GUI and for file I/O.
          Mathematical objects such as triangulations, links, surface lists,
          etc. are standalone, without the overhead of the full packet tree
          infrastructure (so no labels, tags, listeners, or parent/child
          relationships).  To use them with the full packet tree
          infrastructure, use a PacketOf<...> wrapper.
        - Normal surface/hypersurface lists and angle structure lists no
          longer need their triangulations to sit above them in the
          packet tree, and indeed their triangulations may change or
          even be deleted.  Lists will maintain a "snapshot" of the original
          triangulation if necessary.